<resources>
  <string name="app_name">Project 4</string>
  <string name="action_settings">Settings</string>
  <string name="google">Google</string>
  <string name="logout">Logout</string>
  <string name="add">Add</string>
  <string name="selectedSub">Item</string>
  <string name="item_title">Sub Section Title</string>
  <string name="item_description">Item Description</string>
  <string name="profile">Profile</string>
  <string name="profile_pic">Profile Pic</string>
  <string name="name">Name</string>
  <string name="gmail">Gmail</string>
  <string name="login">Login</string>
  <string name="forgot_password">FORGOT PASSWORD ?</string>
  <string name="key">key</string>
  <string name="password">Password</string>
  <string name="email">Email</string>
  <string name="msg">msg</string>
  <string name="logo">Logo</string>
  <string name="item_link">Sub Section Link</string>
  <string name="edit">Edit</string>
  <string name="delete">Delete</string>
  <string name="update">Update</string>
  <string name="add_new_item">Add New Item</string>
  <string name="update_drive_link">Update Drive Link</string>
</resources>
