<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/bottom_sheet_background"
  android:backgroundTint="@color/bottom_sheet_background">

  <Button
    android:id="@+id/item_update"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:fontFamily="@font/poppins_regular"
    android:textColor="@color/light"
    android:backgroundTint="@color/gprec"
    android:text="@string/update"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/item_link_1" />

  <androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:fontFamily="@font/poppins_regular"
    android:text="@string/update_drive_link"
    android:textColor="@color/dark"
    android:textSize="20sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/item_link_1"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginTop="10dp"
    android:autofillHints="Title"
    android:hint="@string/item_link"
    android:inputType="text"
    app:layout_constraintTop_toBottomOf="@id/text">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/item_link"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textColor="@color/dark"
      android:fontFamily="@font/poppins_regular" />

  </com.google.android.material.textfield.TextInputLayout>

  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/item_update"
    android:layout_marginTop="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
